--- a/1.0.0/demo.html
+++ b/1.0.0/demo.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>.
   <link rel="stylesheet" href="plugin.css">
-  <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+  <script src="jquery-1.10.2.js"></script>
   <script src="plugin.js"></script>
   <script>
   	
@@ -20,12 +20,16 @@
 
   </script>
 
-
+<style>
+  .active{
+    background:blue;
+  }
+</style>
 </head>
 <body>
 
 
-<input id="username" >
+<input id="username"  autocomplete="off">
 
 
 <div class="qdropdownselect" id="qdropdownselect" style="display:none">
