--- a/1.0.1/demo.html
+++ b/1.0.1/demo.html
@@ -56,8 +56,8 @@
 
 
 
-<input id="username"  autocomplete="off" qdropdownselect   ng-model="username"/>
-<input id="password"  autocomplete="off" qdropdownselect   ng-model="password"/>
+<input id="username"  autocomplete="off" qdropdownselect   ng-model="username"  qdropdownselecttemp=".qdropdownselectTemp" />
+<input id="password"  autocomplete="off" qdropdownselect   ng-model="password" qdropdownselecttemp=".qdropdownselectTemp"/>
 
 <div class="qdropdownselect qdropdownselectTemp"  style="display:none">
     <div class="qitem"  data-qvalue="1">
