--- a/1.0.1/demo.html
+++ b/1.0.1/demo.html
@@ -45,6 +45,9 @@
 
 <input id="username"  autocomplete="off" qdropdownselect   ng-model="username"  qdropdownselecttemp=".qdropdownselectTemp" />
 <input id="password"  autocomplete="off" qdropdownselect   ng-model="password" qdropdownselecttemp=".qdropdownselectTemp"/>
+<input id="username"  autocomplete="off" qdropdownselect   ng-model="sex"  qdropdownselecttemp=".qdropdownselectTemp" />
+<input id="password"  autocomplete="off" qdropdownselect   ng-model="birth" qdropdownselecttemp=".qdropdownselectTemp"/>
+
 
 <div class="qdropdownselect qdropdownselectTemp"  style="display:none">
     <div class="qitem"  data-qvalue="1">
