--- a/1.0.1/demo.html
+++ b/1.0.1/demo.html
@@ -29,7 +29,7 @@
 
     var mainApp=angular.module("mainApp",["qui"]);
     mainApp.controller("mainController", function ($rootScope,$http,$location,$scope) {
-      $scope.username;
+      $scope.username="2";
       $scope.password;
     });
   </script>
